@@ -2,6 +2,8 @@ package com.keyin.aircraftTests;
 
 import com.keyin.aircraft.Aircraft;
 import com.keyin.aircraft.AircraftClient;
+import com.keyin.airline.Airline;
+import com.keyin.airline.AirlineClient;
 import com.keyin.common.RestClient;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -32,6 +34,6 @@ public class AircraftClientTest {
 
         Assertions.assertNotNull(aircrafts);
         Assertions.assertEquals(1,aircrafts.size());
-        Assertions.assertEquals("Air Canada",aircrafts.get(0).getAirlineName());
+        Assertions.assertEquals("Air Canada",aircrafts.getFirst().getAirline());
     }
 }
